lintian (1.23.50) unstable; urgency=low

  * reporting/templates/clean.tmpl:
    + [FL] Include link to full maintainer report.  Suggested by
      Kartik Mistry.

 -- Frank Lichtenheld <djpig@debian.org>  Thu, 29 May 2008 17:31:41 +0200

lintian (1.23.49) unstable; urgency=low

  The "Business as usual" release.

  * checks/binaries:
    + [FL] Ignore rpaths to directories present in the same binary
      package.  Also ignore $ORIGIN since that obviously fulfills
      that criterion.  (Closes: #480636)
  * checks/copyright-file{,.desc}:
    + [FL] Implement new check for dh-make-perl boilerplate.
    + [FL] New check for example URL from dh-make.  Based on
      a patch by Michal Čihař.  (Closes: #481368)
  * checks/debhelper:
    + [FL] dh_lintian needs debhelper >= 6.0.7. Patch by David Paleino.
      (Closes: #479088)
    + [FL] Add basic support for debhelpers new dh utility.
      (Closes: #477628)
    + [FL] Suppress maintainer-script-lacks-debhelper-token for
      single-udeb-only packages as well.  (Closes: #471853)
  * checks/files:
    + [FL] Drop xresources-file-in-etc-without-proper-conflicts, since
      the last package that conflict applies to was released with hamm!
      Reported by Julien Cristau.  (Closes: #480574)
  * checks/menu-format:
    + [FL] Don't issue false positives about menu files in format menu-2.
      We don't check them for errors yet, though.  (Closes: #478578)
  * checks/patch-systems:
    + [FL] Add basic support for dpatch list files which use cpp for
      preprocessing.  Patch by Jörg Sommer.  (Closes: #477057)
  * checks/scripts:
    + [FL] Always use /bin/bash for shell script syntax check to give
      consistent errors on systems with changed /bin/sh.  Suggested
      by Raphael Geissert.  (Closes: #478192)
  
  * frontend/lintian:
    + [FL] Don't issue a warning about Distribution: UNRELEASED in
      .changes files.  It can be annoying to have to ignore this error